# viqzo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
backend/: manage.py  schema.yml
backend/api/: filters.py  paginators.py  permissons.py  serializers.py  tasks.py  urls.py  validators.py  views.py
backend/api/services/: links_file.py  services_exceptions.py  short_links.py  url_short_logic.py  usergroup.py
backend/core/: enums.py
backend/links/: admin.py  apps.py  models.py  validators.py
backend/links/management/commands/: init_all_colors.py
backend/links/migrations/: 0001_initial.py  0002_alter_shortlink_options.py  0002_alter_shortlink_short_url.py  0002_alter_usergroup_color.py  0002_remove_usercampaign_unique_name_per_owner_and_more.py  0002_shortlink_clicks_count_shortlink_is_active.py  0003_alter_shortlink_table.py  0003_alter_usergroup_name.py  0003_color_alter_usergroup_color.py  0003_shortlink_last_clicked_at.py  0004_aliasshortlink_alter_shortlink_options_and_more.py  0004_alter_color_color_hex.py  0004_alter_usergrouplink_alias_link_and_more.py  0005_alter_aliasshortlink_options.py  0005_alter_color_color_hex_alter_shortlink_short.py  0005_alter_usergrouplink_alias_link_and_more.py  0006_alter_aliasshortlink_table.py  0006_alter_usergroup_name.py  0007_alter_usergrouplink_alias_link_and_more.py  0007_remove_aliasshortlink_unique_alias_link.py  0008_alter_aliasshortlink_original_link_and_more.py  0008_remove_usergrouplink_unique_alias_link_per_group_and_more.py
backend/links/services/: colors.py  services_exceptions.py  short_links.py  url_short_logic.py  user_campaigns.py  user_groups.py  user_groups_links.py
backend/resources/: colors.csv
backend/tests/tests_business_logic/: test_blogic_00_basic_url_short.py
backend/urls/: models.py  validators.py
backend/users/: models.py  urls.py
backend/viqzo/: asgi.py  dev-settings.py  handlers.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  utils.py
tests/fixtures/: fixture_alias_url.py  fixture_colors.py  fixture_short_url.py  fixture_usergroup.py  fixture_users.py
tests/tests_api/: test_api_00_basic_short_url.py  test_api_01_alias_short_url.py  test_api_02_short_links_group.py  test_api_02_usergroup.py  test_api_03_usergroup.py  test_api_03_usergroup_links.py
tests/tests_business_logic/: test_blogic_00_basic_url_short.py  test_blogic_01_colors.py
