[tool.poetry]
name = "viqzo"
version = "0.1.0"
description = ""
authors = ["HETPAHEP"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2.2"
djangorestframework = "3.14.0"
python-dotenv = "1.0.0"
pytelegrambotapi = "4.12.0"
djoser = "2.2.0"
cffi = "^1.16.0"
django-filter = "23.2"
djangorestframework-simplejwt = "5.2.2"

[tool.poetry.group.dev.dependencies]
mypy = "1.4.1"
isort = "5.12.0"
flake8 = "6.0.0"
pytest = "7.4.0"
pytest-django = "4.5.2"
coverage = "7.2.7"
pillow = "10.0.0"
commitizen = "^3.15.0"
drf-spectacular = "^0.27.1"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
